accessibility and SEO for resume pages

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -157,7 +157,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main">
+    <main class="main-resume" role="main" aria-label="Main Resume Section">
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
@@ -170,8 +170,12 @@
                 alt="Kathrin Peled's profile picture"
               />
               <h1>Kathrin Peled</h1>
-              <h3 id="profession-title">Web Developer</h3>
-              <div class="social-media">
+              <h2 id="profession-title">Web Developer</h2>
+              <div
+                class="social-media"
+                role="navigation"
+                aria-label="Social media links"
+              >
                 <a
                   href="https://t.me/Draculady"
                   target="_blank"
@@ -286,7 +290,7 @@
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2022 -
                     2023</span
                   >
-                  <h3 id="work-title-1">Customer support agent</h3>
+                  <h3 id="work-title-1">Customer Support Agent</h3>
                   <p>
                     <span class="link-span"
                       >Worked as a customer support agent at
@@ -323,6 +327,9 @@
                       ><a
                         href="https://berlin-jobs-teleperformance.career.softgarden.de/en/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Teleperformance job listing page for user-generated content moderation roles"
+                      >
                         >Reviewed user-generated content</a
                       >
                       on social media platforms in Hebrew and English, ensuring
@@ -349,6 +356,8 @@
                       <a
                         href="https://www.lseg.com/en/data-analytics"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the London Stock Exchange Group Data Analytics page"
                         >Data Analyst</a
                       >for the Israeli stock exchange market, I enhanced data
                       accuracy and efficiency.</span
@@ -373,7 +382,7 @@
             </div>
             <!-- page 2 (Work Experiece) -->
             <div class="page-back">
-              <h1 class="title" id="work-title-back">Work Experiece</h1>
+              <h1 class="title" id="work-title-back">Work Experience</h1>
 
               <div
                 class="workeduc-box"
@@ -386,7 +395,7 @@
                     2018</span
                   >
                   <h3 id="work-title-4">
-                    Saleswoman, Bookkeeper and R.M.A clerk
+                    Saleswoman, Bookkeeper, And R.M.A Clerk
                   </h3>
                   <p>
                     <span class="link-span">
@@ -422,13 +431,15 @@
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2015 -
                     2015</span
                   >
-                  <h3 id="work-title-5">Teacher of computer professions</h3>
+                  <h3 id="work-title-5">Teacher Of Computer Professions</h3>
                   <p>
                     <span class="link-span"
                       >As a teacher in the
                       <a
                         href="https://www.gov.il/he/pages/most_lehava"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Lehava project page on the Government of Israel website"
                         >"Lehava"</a
                       >
                       project, I educated diverse students on computer usage and
@@ -500,7 +511,9 @@
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2024 -
                     2024</span
                   >
-                  <h3 id="education-title-2">Orientations Course For Hi-Tech</h3>
+                  <h3 id="education-title-2">
+                    Orientations Course For Hi-Tech
+                  </h3>
                   <p>
                     <span class="link-span"
                       >Completed an orientation course at
@@ -580,7 +593,7 @@
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2008 -
                     2009</span
                   >
-                  <h3  id="education-title-4">Microsoft Technician</h3>
+                  <h3 id="education-title-4">Microsoft Technician</h3>
                   <p>
                     <span class="link-span">
                       Earned
@@ -588,6 +601,7 @@
                         href="../Files/MCDST_Datasheet.pdf
                       "
                         download="MCDST_Datasheet.pdf"
+                        aria-label="Download Microsoft Certified Desktop Support Technician certification"
                         >Microsoft Certified Desktop Support Technician
                         (MCDST)</a
                       >
@@ -595,6 +609,8 @@
                       <a
                         href="https://college.org.il/extensions/%D7%97%D7%99%D7%A4%D7%94/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit HaMichlala LeMinhal website"
                         >HaMichlala LeMinhal, Haifa.</a
                       >
                     </span>
@@ -613,12 +629,16 @@
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2023 -
                     2023</span
                   >
-                  <h3  id="education-title-5">German Course B2</h3>
+                  <h3 id="education-title-5">German Course B2</h3>
                   <p>
                     <span class="link-span"
                       >Completed a professional German language course (B2
                       Zertifikat) at
-                      <a href="https://www.zebus-ev.de/" target="_blank"
+                      <a
+                        href="https://www.zebus-ev.de/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the ZeBus School website"
                         >ZeBus Schule,</a
                       >
                       Berlin, and successfully passed the telc exam, enhancing
@@ -645,6 +665,8 @@
                       <a
                         href="https://www.berlin.de/vhs/volkshochschulen/spandau/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Volkshochschule Spandau website"
                         >Volkshochschule Spandau,</a
                       >
                       Germany, and achieved the telc B1 certificate, improving
@@ -756,13 +778,18 @@
             <div class="page-back">
               <h1 class="title">✉️ Contact Me</h1>
               <div class="contact-box">
-                <form action="https://formspree.io/f/xyzgryqo" method="POST">
+                <form
+                  action="https://formspree.io/f/xyzgryqo"
+                  method="POST"
+                  aria-labelledby="contact-form-title"
+                >
                   <input
                     type="text"
                     class="field"
                     name="fullName"
                     placeholder="Full Name"
                     required
+                    aria-label="Full Name"
                   />
                   <input
                     type="email"
@@ -770,6 +797,8 @@
                     name="email"
                     placeholder="Email Address"
                     required
+                    aria-label="Email Address"
+
                   />
                   <textarea
                     name="message"
@@ -778,8 +807,10 @@
                     class="field"
                     placeholder="Your Message"
                     required
+                    aria-label="Your Message"
+
                   ></textarea>
-                  <input type="submit" class="btn" value="Send Message" />
+                  <input type="submit" class="btn" value="Send Message" aria-label="Send your message"/>
                 </form>
               </div>
               <span class="number-page" aria-label="Page 6 of the resume"
