--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -157,7 +157,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main">
+    <main class="main-resume" role="main" aria-label="Main Resume Section">
       <div class="book">
         <!-- page 0 -->
         <div class="book-page">
@@ -167,8 +167,12 @@
               alt="Kathrin Peled's profile picture"
             />
             <h1>Kathrin Peled</h1>
-            <h3 id="profession-title">Web Developer</h3>
-            <div class="social-media">
+            <h2 id="profession-title">Web Developer</h2>
+            <div
+              class="social-media"
+              role="navigation"
+              aria-label="Social media links"
+            >
               <a
                 href="https://t.me/Draculady"
                 target="_blank"
@@ -270,14 +274,14 @@
         <!-- page 1 & 2 -->
         <div class="book-page">
           <!-- page 1 (work experience) -->
-          <h1 class="title"  id="work-title-front">Work Experience</h1>
+          <h1 class="title" id="work-title-front">Work Experience</h1>
           <div class="workeduc-box" role="region" aria-labelledby="workeduc-1">
             <div class="workeduc-content">
               <span class="year"
                 ><i class="bx bxs-calendar" aria-hidden="true"></i> 2022 -
                 2023</span
               >
-              <h3 id="work-title-1">Customer support agent</h3>
+              <h3 id="work-title-1">Customer Support Agent</h3>
               <p>
                 <span class="link-span"
                   >Worked as a customer support agent at
@@ -310,6 +314,9 @@
                   ><a
                     href="https://berlin-jobs-teleperformance.career.softgarden.de/en/"
                     target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit the Teleperformance job listing page for user-generated content moderation roles"
+                  >
                     >Reviewed user-generated content</a
                   >
                   on social media platforms in Hebrew and English, ensuring
@@ -319,8 +326,7 @@
               </p>
             </div>
           </div>
-          <div class="workeduc-box" role="region"
-          aria-labelledby="workeduc-3">
+          <div class="workeduc-box" role="region" aria-labelledby="workeduc-3">
             <div class="workeduc-content">
               <span class="year"
                 ><i class="bx bxs-calendar" aria-hidden="true"></i> 2020 -
@@ -333,6 +339,8 @@
                   <a
                     href="https://www.lseg.com/en/data-analytics"
                     target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit the London Stock Exchange Group Data Analytics page"
                     >Data Analyst</a
                   >for the Israeli stock exchange market, I enhanced data
                   accuracy and efficiency.</span
@@ -348,15 +356,14 @@
         </div>
         <!-- page 2 (Work Experiece) -->
         <div class="book-page">
-          <h1 class="title"  id="work-title-back">Work Experiece</h1>
-          <div class="workeduc-box" role="region"
-          aria-labelledby="workeduc-4">
+          <h1 class="title" id="work-title-back">Work Experience</h1>
+          <div class="workeduc-box" role="region" aria-labelledby="workeduc-4">
             <div class="workeduc-content">
               <span class="year"
                 ><i class="bx bxs-calendar" aria-hidden="true"></i> 2016 -
                 2018</span
               >
-              <h3 id="work-title-4">Saleswoman, Bookkeeper and R.M.A clerk</h3>
+              <h3 id="work-title-4">Saleswoman, Bookkeeper, And R.M.A Clerk</h3>
               <p>
                 <span class="link-span">
                   During my time at
@@ -380,20 +387,21 @@
               </p>
             </div>
           </div>
-          <div class="workeduc-box" role="region"
-          aria-labelledby="workeduc-5">
+          <div class="workeduc-box" role="region" aria-labelledby="workeduc-5">
             <div class="workeduc-content">
               <span class="year"
                 ><i class="bx bxs-calendar" aria-hidden="true"></i> 2015 -
                 2015</span
               >
-              <h3  id="work-title-5">Teacher of computer professions</h3>
+              <h3 id="work-title-5">Teacher of Computer Professions</h3>
               <p>
                 <span class="link-span"
                   >As a teacher in the
                   <a
                     href="https://www.gov.il/he/pages/most_lehava"
                     target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit the Lehava project page on the Government of Israel website"
                     >"Lehava"</a
                   >
                   project, I educated diverse students on computer usage and
@@ -509,7 +517,7 @@
                 ><i class="bx bxs-calendar" aria-hidden="true"></i> 2008 -
                 2009</span
               >
-              <h3  id="education-title-4">Microsoft Technician</h3>
+              <h3 id="education-title-4">Microsoft Technician</h3>
               <p>
                 <span class="link-span">
                   Earned
@@ -517,12 +525,15 @@
                     href="../Files/MCDST_Datasheet.pdf
                   "
                     download="MCDST_Datasheet.pdf"
+                    aria-label="Download Microsoft Certified Desktop Support Technician certification"
                     >Microsoft Certified Desktop Support Technician (MCDST)</a
                   >
                   certification from
                   <a
                     href="https://college.org.il/extensions/%D7%97%D7%99%D7%A4%D7%94/"
                     target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit HaMichlala LeMinhal website"
                     >HaMichlala LeMinhal, Haifa.</a
                   ></span
                 >
@@ -543,7 +554,11 @@
                 <span class="link-span"
                   >Completed a professional German language course (B2
                   Zertifikat) at
-                  <a href="https://www.zebus-ev.de/" target="_blank"
+                  <a
+                    href="https://www.zebus-ev.de/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit the ZeBus School website"
                     >ZeBus Schule,</a
                   >
                   Berlin, and successfully passed the telc exam, enhancing
@@ -566,6 +581,8 @@
                   <a
                     href="https://www.berlin.de/vhs/volkshochschulen/spandau/"
                     target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Visit the Volkshochschule Spandau website"
                     >Volkshochschule Spandau,</a
                   >
                   Germany, and achieved the telc B1 certificate, improving
@@ -654,13 +671,18 @@
         <div class="book-page">
           <h1 class="title">✉️ Contact Me</h1>
           <div class="contact-box" id="contact-box">
-            <form action="https://formspree.io/f/xyzgryqo" method="POST">
+            <form
+              action="https://formspree.io/f/xyzgryqo"
+              method="POST"
+              aria-labelledby="contact-form-title"
+            >
               <input
                 type="text"
                 class="field"
                 name="fullName"
                 placeholder="Full Name"
                 required
+                aria-label="Full Name"
               />
               <input
                 type="email"
@@ -668,6 +690,8 @@
                 name="email"
                 placeholder="Email Address"
                 required
+                aria-label="Email Address"
+
               />
               <textarea
                 name="message"
@@ -676,8 +700,10 @@
                 class="field"
                 placeholder="Your Message"
                 required
+                aria-label="Your Message"
+
               ></textarea>
-              <input type="submit" class="btn" value="Send Message" />
+              <input type="submit" class="btn" value="Send Message" aria-label="Send your message"/>
             </form>
           </div>
           <span class="number-page" aria-label="Page 6 of the resume">6</span>
