--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -163,7 +163,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main">
+    <main class="main-resume" role="main" aria-label="Main Resume Section">
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
@@ -176,9 +176,13 @@
                 alt="Kathrin Peled's profile picture"
               />
               <h1>Kathrin Peled</h1>
-              <h3 id="profession-title">Web Entwicklerin</h3>
+              <h2 id="profession-title">Web Entwicklerin</h2>
               <!-- <h4>front-end Junior</h4> -->
-              <div class="social-media">
+              <div
+                class="social-media"
+                role="navigation"
+                aria-label="Social media links"
+              >
                 <a
                   href="https://t.me/Draculady"
                   target="_blank"
@@ -284,7 +288,7 @@
           <div class="book-page page-right turn" id="turn-1">
             <!-- page 1 (work experience) -->
             <div class="page-front">
-              <h1 class="title"  id="work-title-front">Berufserfahrung</h1>
+              <h1 class="title" id="work-title-front">Berufserfahrung</h1>
               <div
                 class="workeduc-box"
                 role="region"
@@ -331,6 +335,9 @@
                       <a
                         href="https://berlin-jobs-teleperformance.career.softgarden.de/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Teleperformance job listing page for user-generated content moderation roles"
+                      >
                         >nutzergenerierte Inhalte</a
                       >
                       auf sozialen Medien in Hebräisch und Englisch, um die
@@ -341,8 +348,11 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region"
-              aria-labelledby="workeduc-3">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="workeduc-3"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2020 -
@@ -355,6 +365,8 @@
                       <a
                         href="https://www.lseg.com/en/data-analytics"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the London Stock Exchange Group Data Analytics page"
                         >Datenanalyst</a
                       >
                       für den israelischen Aktienmarkt verbesserte ich die
@@ -381,16 +393,21 @@
             </div>
             <!-- page 2 (Work Experiece) -->
             <div class="page-back">
-              <h1 class="title"  id="work-title-back">Berufserfahrung</h1>
+              <h1 class="title" id="work-title-back">Berufserfahrung</h1>
 
-              <div class="workeduc-box" role="region"
-              aria-labelledby="workeduc-4">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="workeduc-4"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2016 -
                     2018</span
                   >
-                  <h3 id="work-title-4">Verkäuferin, Buchhalterin und R.M.A. Sachbearbeiterin</h3>
+                  <h3 id="work-title-4">
+                    Verkäuferin, Buchhalterin und R.M.A. Sachbearbeiterin
+                  </h3>
                   <p>
                     <span class="link-span"
                       >Während meiner Zeit bei
@@ -414,20 +431,25 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region"
-              aria-labelledby="workeduc-5">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="workeduc-5"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2015 -
                     2015</span
                   >
-                  <h3  id="work-title-5">Lehrerin für Computerberufe</h3>
+                  <h3 id="work-title-5">Lehrerin für Computerberufe</h3>
                   <p>
                     <span class="link-span"
                       >Als Lehrerin im
                       <a
                         href="https://www.gov.il/he/pages/most_lehava"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Lehava project page on the Government of Israel website"
                         >Lehava-Projekt</a
                       >
                       bildete ich diverse Schüler im Umgang mit Computern und
@@ -459,7 +481,11 @@
             <!-- page 3 (Education) -->
             <div class="page-front">
               <h1 class="title" id="education-title-front">Ausbildung</h1>
-              <div class="workeduc-box" role="region" aria-labelledby="education-1">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-1"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2024 -
@@ -485,7 +511,11 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region" aria-labelledby="education-2">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-2"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2024 -
@@ -511,13 +541,19 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region" aria-labelledby="education-3">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-3"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2013 -
                     2017</span
                   >
-                  <h3 id="education-title-3">Praktische Ingenieurin in Software</h3>
+                  <h3 id="education-title-3">
+                    Praktische Ingenieurin in Software
+                  </h3>
                   <p>
                     <span class="link-span">
                       Habe am
@@ -559,19 +595,24 @@
             <!-- page 4 (Education) -->
             <div class="page-back">
               <h1 class="title" id="education-title-back">Ausbildung</h1>
-              <div class="workeduc-box" role="region" aria-labelledby="education-4">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-4"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2008 -
                     2009</span
                   >
-                  <h3  id="education-title-4">Microsoft-Technikerin</h3>
+                  <h3 id="education-title-4">Microsoft-Technikerin</h3>
                   <p>
                     <span class="link-span">
                       Erwarb die Zertifizierung als
                       <a
                         href="../Files/MCDST_Datasheet.pdf"
                         download="MCDST_Datasheet"
+                        aria-label="Download Microsoft Certified Desktop Support Technician certification"
                         >Microsoft Certified Desktop Support Technician
                         (MCDST)</a
                       >
@@ -579,6 +620,8 @@
                       <a
                         href="https://college.org.il/extensions/%D7%97%D7%99%D7%A4%D7%94/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit HaMichlala LeMinhal website"
                         >HaMichlala LeMinhal in Haifa.</a
                       ></span
                     >
@@ -587,7 +630,11 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region" aria-labelledby="education-5">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-5"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2023 -
@@ -598,7 +645,11 @@
                     <span class="link-span"
                       >Absolvierte einen professionellen Deutschkurs
                       (B2-Zertifikat) an der
-                      <a href="https://www.zebus-ev.de/" target="_blank"
+                      <a
+                        href="https://www.zebus-ev.de/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the ZeBus School website"
                         >ZeBus Schule
                       </a>
                       in Berlin und bestand erfolgreich die telc-Prüfung, um die
@@ -608,7 +659,11 @@
                   </p>
                 </div>
               </div>
-              <div class="workeduc-box" role="region" aria-labelledby="education-6">
+              <div
+                class="workeduc-box"
+                role="region"
+                aria-labelledby="education-6"
+              >
                 <div class="workeduc-content">
                   <span class="year"
                     ><i class="bx bxs-calendar" aria-hidden="true"></i> 2022 -
@@ -621,6 +676,8 @@
                       <a
                         href="https://www.berlin.de/vhs/volkshochschulen/spandau/"
                         target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Visit the Volkshochschule Spandau website"
                         >Volkshochschule Spandau,</a
                       >
                       Deutschland, und erlangte das telc B1-Zertifikat, um die
@@ -733,13 +790,18 @@
             <div class="page-back">
               <h1 class="title">✉️ Kontaktiere mich</h1>
               <div class="contact-box" id="contact-box">
-                <form action="https://formspree.io/f/xyzgryqo" method="POST">
+                <form
+                  action="https://formspree.io/f/xyzgryqo"
+                  method="POST"
+                  aria-labelledby="contact-form-title"
+                >
                   <input
                     type="text"
                     class="field"
                     name="fullName"
                     placeholder="Vollname"
                     required
+                    aria-label="Full Name"
                   />
                   <input
                     type="email"
@@ -747,6 +809,8 @@
                     name="email"
                     placeholder="E-Mail-Adresse"
                     required
+                    aria-label="Email Address"
+
                   />
                   <textarea
                     name="message"
@@ -755,8 +819,10 @@
                     class="field"
                     placeholder="Ihre Nachricht"
                     required
+                    aria-label="Your Message"
+
                   ></textarea>
-                  <input type="submit" class="btn" value="Senden" />
+                  <input type="submit" class="btn" value="Senden" aria-label="Send your message"/>
                 </form>
               </div>
               <span class="number-page" aria-label="Page 6 of the resume"
