--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -494,7 +494,7 @@
                   <h3 id="education-title-1">Webentwicklungs-Kurs</h3>
                   <p>
                     <span class="link-span">
-                      Ich bin derzeit im Webentwicklungs-Kurs am
+                      Webentwicklungs-Kurs am
                       <a
                         href="https://digitalcareerinstitute.org/"
                         target="_blank"
@@ -502,12 +502,11 @@
                         aria-label="Visit Digital Career Institute website"
                         >Digital Career Institute (DCI)</a
                       >
-                      in Berlin eingeschrieben.</span
-                    >
-                    Das Programm umfasst die Full-Stack-Entwicklung und
-                    konzentriert sich auf moderne Front-End-Technologien wie
-                    HTML, CSS, JavaScript, React und Back-End-Technologien wie
-                    Node.js und Datenbanken.
+                      in Berlin.
+                    </span>
+                    Das Programm umfasst Full-Stack-Entwicklung und moderne
+                    Front-End-Technologien wie HTML, CSS, JavaScript, React
+                    sowie Back-End-Technologien wie Node.js und Datenbanken.
                   </p>
                 </div>
               </div>
@@ -523,21 +522,20 @@
                   >
                   <h3 id="education-title-2">Orientierungskurs für Hi-Tech</h3>
                   <p>
-                    <span class="link-span"
-                      >Ich habe einen Orientierungskurs am
+                    <span class="link-span">
+                      Ich habe einen Orientierungskurs am
                       <a
                         href="https://digitalcareerinstitute.org/"
                         target="_blank"
                         rel="noopener noreferrer"
                         aria-label="Visit Digital Career Institute website"
-                        >DCI
-                      </a>
+                        >DCI</a
+                      >
                       in Berlin abgeschlossen, der sich auf
-                      Hi-Tech-Webentwicklung und Online-Marketing
-                      konzentrierte.</span
-                    >
+                      Hi-Tech-Webentwicklung und Online-Marketing konzentrierte.
+                    </span>
                     Der Kurs umfasste Abschlussprojekte, die praktische
-                    Fähigkeiten in diesen Bereichen demonstrierten.
+                    Fähigkeiten demonstrierten.
                   </p>
                 </div>
               </div>
@@ -562,7 +560,7 @@
                         target="_blank"
                         rel="noopener noreferrer"
                         aria-label="Visit Technion website"
-                        >Technion – Israelisches Institut für Technologie</a
+                        >Technion</a
                       >
                       mit einem Diplom in
                       <a
@@ -570,14 +568,13 @@
                         target="_blank"
                         rel="noopener noreferrer"
                         aria-label="Visit Practical Engineering website"
-                        >Praktischer Ingenieurwissenschaft</a
+                        >Praktischer Ingenieur</a
                       >
-                      in Softwareprogrammierung abgeschlossen.</span
-                    >
-                    Mein Abschlussprojekt war ein in Java basiertes
-                    'Snake'-Spiel mit 10 Levels. Während meines Studiums
-                    sammelte ich Erfahrung in mehreren Programmiersprachen,
-                    darunter Java, C, C#, PHP, HTML und CSS.
+                      in Softwareprogrammierung abgeschlossen.
+                    </span>
+                    Mein Abschlussprojekt war ein in Java 'Snake'-Spiel. Während
+                    meines Studiums habe ich verschiedenen Programmiersprachen,
+                    inkl. Java, C, C#, PHP, HTML und CSS gelernt.
                   </p>
                 </div>
               </div>
@@ -810,7 +807,6 @@
                     placeholder="E-Mail-Adresse"
                     required
                     aria-label="Email Address"
-
                   />
                   <textarea
                     name="message"
@@ -820,9 +816,13 @@
                     placeholder="Ihre Nachricht"
                     required
                     aria-label="Your Message"
-
                   ></textarea>
-                  <input type="submit" class="btn" value="Senden" aria-label="Send your message"/>
+                  <input
+                    type="submit"
+                    class="btn"
+                    value="Senden"
+                    aria-label="Send your message"
+                  />
                 </form>
               </div>
               <span class="number-page" aria-label="Page 6 of the resume"
