--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -166,17 +166,17 @@
       </div>
     </header>
     <main>
-      <section class="download-files">
+      <section class="download-files" aria-labelledby="download-files-title">
         <div class="my-files">
           <div class="container">
             <div class="h3-title">
-              <h3>Lade Maine Dateien Herunter</h3>
+              <h3 id="download-files-title">Lade Maine Dateien Herunter</h3>
             </div>
             <div class="files">
               <a
                 href="../Files/Diplom Übersetzung 2023.pdf"
                 download
-                aria-label="Download my diploma"
+                aria-label="Download my diploma in German"
               >
                 <div class="file-item">
                   <div class="file-icon">
@@ -192,7 +192,7 @@
               </a>
               <a
                 href="../Files/Kathrin Peled Resume 07.2024 .pdf"
-                aria-label="Download my resume CV"
+                aria-label="Download my extended resume in English"
                 download
               >
                 <div class="file-item">
@@ -208,7 +208,7 @@
               </a>
               <a
                 href="../Files/Kathrin Peled Professional Resume.pdf"
-                aria-label="Download my professional resume"
+                aria-label="Download my professional resume in English"
                 download
               >
                 <div class="file-item">
@@ -225,7 +225,7 @@
               <a
                 href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
                 download
-                aria-label="Download my professional CV"
+                aria-label="Download my professional Resume in German"
               >
                 <div class="file-item">
                   <div class="file-icon">
