aria-labels updates

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -217,7 +217,9 @@
                       placeholder="Type your message here"
                     ></textarea>
                     <br />
-                    <button type="submit" aria-label="Send your message">Senden</button>
+                    <button type="submit" aria-label="Send your message">
+                      Senden
+                    </button>
                   </form>
                 </div>
               </div>
@@ -229,7 +231,10 @@
         <div class="container">
           <div class="h2-title">
             <h2>
-              Kontaktiere mich hier...<i class="fa-regular fa-face-smile"></i>
+              Kontaktiere mich hier...<i
+                class="fa-regular fa-face-smile"
+                aria-hidden="true"
+              ></i>
             </h2>
           </div>
           <div class="contact-options-divs">
@@ -320,6 +325,7 @@
                       <i
                         class="fa-brands fa-x-twitter"
                         title="Twitter/X: https://x.com/DraculadyKath"
+                        aria-hidden="true"
                       ></i>
                     </a>
                   </li>
@@ -360,6 +366,7 @@
                       <i
                         class="fa-brands fa-square-github"
                         title="GitHub Student: https://github.com/KathrinKath"
+                        aria-hidden="true"
                       ></i>
                     </a>
                   </li>
