--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -224,7 +224,12 @@
       <section id="social-medias">
         <div class="container">
           <div class="h2-title">
-            <h2>Contact Me Here...<i class="fa-regular fa-face-smile"></i></h2>
+            <h2>
+              Contact Me Here...<i
+                class="fa-regular fa-face-smile"
+                aria-hidden="true"
+              ></i>
+            </h2>
           </div>
           <div class="contact-options-divs">
             <div class="contact-directly">
@@ -314,6 +319,7 @@
                       <i
                         class="fa-brands fa-x-twitter"
                         title="Twitter/X: https://x.com/DraculadyKath"
+                        aria-hidden="true"
                       ></i>
                     </a>
                   </li>
@@ -354,6 +360,7 @@
                       <i
                         class="fa-brands fa-square-github"
                         title="GitHub Student: https://github.com/KathrinKath"
+                        aria-hidden="true"
                       ></i>
                     </a>
                   </li>
