--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -195,7 +195,7 @@
             </div>
             <div class="paragraph-div elements-table-div">
               <p>
-                <i class="fa-regular fa-message"></i>
+                <i class="fa-regular fa-message" aria-hidden="true"></i>
 
                 To facilitate the visualization of my projects and enable users
                 to quickly identify specific skills, I have incorporated icons
