--- a/index.html
+++ b/index.html
@@ -329,11 +329,19 @@
                   </div>
                 </div>
               </div>
-              <button class="carousel-control prev" onclick="moveSlide(-1)">
-                <i class="fa-solid fa-chevron-left"></i>
+              <button
+                class="carousel-control prev"
+                aria-label="Previous slide"
+                onclick="moveSlide(-1)"
+              >
+                <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
               </button>
-              <button class="carousel-control next" onclick="moveSlide(1)">
-                <i class="fa-solid fa-chevron-right"></i>
+              <button
+                class="carousel-control next"
+                aria-label="Next slide"
+                onclick="moveSlide(1)"
+              >
+                <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
               </button>
             </div>
           </div>
